--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,15 +58,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configs\AttachmentConfig.cs" />
     <Compile Include="Configs\AvatarConfig.cs" />
-    <Compile Include="Configs\UserConfig.cs" />
+    <Compile Include="Configs\ChatConfig.cs" />
+    <Compile Include="Configs\MessageConfig.cs" />
     <Compile Include="EF\Initializer.cs" />
     <Compile Include="EF\ZaolisModel.cs" />
+    <Compile Include="Entities\Attachment.cs" />
     <Compile Include="Entities\Avatar.cs" />
+    <Compile Include="Entities\Chat.cs" />
+    <Compile Include="Entities\Message.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\UserContact.cs" />
     <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Configs\UserConfig.cs" />
+    <Compile Include="Configs\UserContactConfig.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\UnitOfWork.cs" />
   </ItemGroup>
