--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -15,6 +15,6 @@
         </providers>
     </entityFramework>
 	<connectionStrings>
-		<add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DAL.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="zaolis" connectionString="data source=den1.mssql8.gear.host;initial catalog=zaolis;User Id=zaolis;Password=Rr7TW?x45w!g;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
