--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -72,6 +72,11 @@
     <Compile Include="Entities\UserContact.cs" />
     <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Migrations\202010281703515_InitialCreate.cs" />
+    <Compile Include="Migrations\202010281703515_InitialCreate.designer.cs">
+      <DependentUpon>202010281703515_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
     <Compile Include="Configs\UserContactConfig.cs" />
@@ -82,7 +87,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010281703515_InitialCreate.resx">
+      <DependentUpon>202010281703515_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
