--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -15,6 +15,6 @@
         </providers>
     </entityFramework>
 	<connectionStrings>
-		<add name="zaolis" connectionString="data source=den1.mssql8.gear.host;initial catalog=zaolis;User Id=zaolis;Password=Rr7TW?x45w!g;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="zaolis" connectionString="data source=den1.mssql8.gear.host;initial catalog=zaolis;User Id=zaolis;Password=Av6q6!a-3242;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
