Added verification code table

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\MessageDTO.cs" />
     <Compile Include="Models\UserContactDTO.cs" />
     <Compile Include="Models\UserDTO.cs" />
+    <Compile Include="Models\VerificationCodeDTO.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
