--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Configs\AvatarConfig.cs" />
     <Compile Include="Configs\ChatConfig.cs" />
     <Compile Include="Configs\MessageConfig.cs" />
+    <Compile Include="Configs\VerificationCodeConfig.cs" />
     <Compile Include="EF\Initializer.cs" />
     <Compile Include="EF\ZaolisModel.cs" />
     <Compile Include="Entities\Attachment.cs" />
@@ -70,8 +71,22 @@
     <Compile Include="Entities\Message.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Entities\UserContact.cs" />
+    <Compile Include="Entities\VerificationCode.cs" />
     <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Migrations\202010282236180_InitialCreate.cs" />
+    <Compile Include="Migrations\202010282236180_InitialCreate.designer.cs">
+      <DependentUpon>202010282236180_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202010291221469_Added verification code.cs" />
+    <Compile Include="Migrations\202010291221469_Added verification code.designer.cs">
+      <DependentUpon>202010291221469_Added verification code.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202010291233432_Added IsConfirmed.cs" />
+    <Compile Include="Migrations\202010291233432_Added IsConfirmed.designer.cs">
+      <DependentUpon>202010291233432_Added IsConfirmed.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
     <Compile Include="Configs\UserContactConfig.cs" />
@@ -82,7 +97,17 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202010282236180_InitialCreate.resx">
+      <DependentUpon>202010282236180_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010291221469_Added verification code.resx">
+      <DependentUpon>202010291221469_Added verification code.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010291233432_Added IsConfirmed.resx">
+      <DependentUpon>202010291233432_Added IsConfirmed.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
