--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -86,6 +86,10 @@
     <Compile Include="Migrations\202010291233432_Added IsConfirmed.designer.cs">
       <DependentUpon>202010291233432_Added IsConfirmed.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010291412200_Removed IsConfirmed.cs" />
+    <Compile Include="Migrations\202010291412200_Removed IsConfirmed.designer.cs">
+      <DependentUpon>202010291412200_Removed IsConfirmed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
@@ -106,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010291233432_Added IsConfirmed.resx">
       <DependentUpon>202010291233432_Added IsConfirmed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010291412200_Removed IsConfirmed.resx">
+      <DependentUpon>202010291412200_Removed IsConfirmed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
