--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BLLClass.cs" />
     <Compile Include="Models\ChatDTO.cs" />
     <Compile Include="Models\MessageDTO.cs" />
+    <Compile Include="Models\RegisterVerificationDTO.cs" />
     <Compile Include="Models\UserContactDTO.cs" />
     <Compile Include="Models\UserDTO.cs" />
     <Compile Include="Models\VerificationCodeDTO.cs" />
