--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202010291412200_Removed IsConfirmed.designer.cs">
       <DependentUpon>202010291412200_Removed IsConfirmed.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010291452432_Registration Verification.cs" />
+    <Compile Include="Migrations\202010291452432_Registration Verification.designer.cs">
+      <DependentUpon>202010291452432_Registration Verification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
@@ -115,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010291412200_Removed IsConfirmed.resx">
       <DependentUpon>202010291412200_Removed IsConfirmed.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010291452432_Registration Verification.resx">
+      <DependentUpon>202010291452432_Registration Verification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
