--- a/DAL/App.config
+++ b/DAL/App.config
@@ -13,6 +13,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DAL.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="workstation id=ZaolisProject.mssql.somee.com;packet size=4096;user id=zaolis_SQLLogin_1;pwd=vt78mdjfzb;data source=ZaolisProject.mssql.somee.com;persist security info=False;initial catalog=ZaolisProject" />
   </connectionStrings>
 </configuration>
