--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\202010291506406_Fix.designer.cs">
       <DependentUpon>202010291506406_Fix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010291513298_Fix1.cs" />
+    <Compile Include="Migrations\202010291513298_Fix1.designer.cs">
+      <DependentUpon>202010291513298_Fix1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
@@ -129,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010291506406_Fix.resx">
       <DependentUpon>202010291506406_Fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010291513298_Fix1.resx">
+      <DependentUpon>202010291513298_Fix1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
