IChildWindow, custom msgbox

--- a/ZaolisService/ZaolisService.csproj
+++ b/ZaolisService/ZaolisService.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj">
+      <Project>{7aa7df19-dcee-42dd-8ffc-dd85acd536d7}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
