--- a/ZaolisService/app.config
+++ b/ZaolisService/app.config
@@ -3,26 +3,46 @@
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
-                <behavior name="">
+                <behavior name="mex">
                     <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
                     <serviceDebug includeExceptionDetailInFaults="false" />
                 </behavior>
             </serviceBehaviors>
         </behaviors>
         <services>
-            <service name="ZaolisService.ZaolisService">
-                <endpoint address="" binding="basicHttpBinding" contract="ZaolisService.IZaolisService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-                <host>
-                    <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/ZaolisService/ZaolisService/" />
-                    </baseAddresses>
-                </host>
-            </service>
+			<service name="ZaolisService.ZaolisService" behaviorConfiguration="mex">
+				<endpoint address="" binding="netTcpBinding" contract="ZaolisService.IZaolisService">
+				</endpoint>
+				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:8301" />
+						<add baseAddress="net.tcp://localhost:8302" />
+					</baseAddresses>
+				</host>
+			</service>
         </services>
-    </system.serviceModel>
+
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- To avoid disclosing metadata information, 
+          set the values below to false before deployment -->
+					<serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+					<!-- To receive exception details in faults for debugging purposes, 
+          set the value below to true.  Set to false before deployment 
+          to avoid disclosing exception information -->
+					<serviceDebug includeExceptionDetailInFaults="True"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+	</system.serviceModel>
+	<entityFramework>
+		<providers>
+			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+		</providers>
+	</entityFramework>
+	<connectionStrings>
+		<add name="zaolis" connectionString="data source=ZaolisProject.mssql.somee.com;initial catalog=ZaolisProject;User Id=zaolis_SQLLogin_1;Password=vt78mdjfzb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
