--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -17,4 +17,20 @@
 	<connectionStrings>
 		<add name="zaolis" connectionString="data source=ZaolisProject.mssql.somee.com;initial catalog=ZaolisProject;User Id=zaolis_SQLLogin_1;Password=vt78mdjfzb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+ <system.serviceModel>
+  <bindings>
+   <wsDualHttpBinding>
+    <binding name="WSDualHttpBinding_IZaolisService" />
+   </wsDualHttpBinding>
+  </bindings>
+  <client>
+   <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
+    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceReference.IZaolisService"
+    name="WSDualHttpBinding_IZaolisService">
+    <identity>
+     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+    </identity>
+   </endpoint>
+  </client>
+ </system.serviceModel>
 </configuration>
