--- a/ZaolisService/app.config
+++ b/ZaolisService/app.config
@@ -1,11 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          requirePermission="false"/>
+    </configSections>
 
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" />
+    <compilation debug="true"/>
   </system.web>
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
@@ -13,8 +19,8 @@
 	  <behaviors>
 		  <serviceBehaviors>
 			  <behavior name="mex">
-				  <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-				  <serviceDebug includeExceptionDetailInFaults="false" />
+				  <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+				  <serviceDebug includeExceptionDetailInFaults="false"/>
 			  </behavior>
 		  </serviceBehaviors>
 	  </behaviors>
@@ -22,15 +28,22 @@
 		  <service name="ZaolisService.ZaolisService" behaviorConfiguration="mex">
 			  <endpoint address="" binding="wsDualHttpBinding" contract="ZaolisService.IZaolisService">
 			  </endpoint>
-			  <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+			  <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
 			  <host>
 				  <baseAddresses>
-					  <add baseAddress="http://localhost:8301/ZaolisService.svc" />
+					  <add baseAddress="http://localhost:8301/ZaolisService.svc"/>
 					  <!--<add baseAddress="net.tcp://localhost:8302" />-->
 				  </baseAddresses>
 			  </host>
 		  </service>
 	  </services>
   </system.serviceModel>
-
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
+	<connectionStrings>
+		<add name="zaolis" connectionString="data source=ZaolisProject.mssql.somee.com;initial catalog=ZaolisProject;User Id=zaolis_SQLLogin_1;Password=vt78mdjfzb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
