--- a/ZaolisUI/ZaolisUI.csproj
+++ b/ZaolisUI/ZaolisUI.csproj
@@ -76,6 +76,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="VerificationCode.xaml.cs">
+      <DependentUpon>VerificationCode.xaml</DependentUpon>
+    </Compile>
     <Page Include="MsgBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -102,6 +105,10 @@
       <DependentUpon>SignIn_SignUp.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="VerificationCode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
