--- a/BLL/packages.config
+++ b/BLL/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
+  <package id="EASendMail" version="7.7.0.5" targetFramework="net472" />
 </packages>
