--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -28,7 +28,7 @@
     bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceReference.IZaolisService"
     name="WSDualHttpBinding_IZaolisService">
     <identity>
-     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+     <userPrincipalName value="HOME-PC\User-PC" />
     </identity>
    </endpoint>
   </client>
