Only friends in listbox

--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -25,7 +25,7 @@
   </bindings>
   <client>
    <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
-    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceReference.IZaolisService"
+    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceClient.IZaolisService"
     name="WSDualHttpBinding_IZaolisService">
     <identity>
      <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
