--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -21,12 +21,20 @@
   <bindings>
    <wsDualHttpBinding>
     <binding name="WSDualHttpBinding_IZaolisService" />
+    <binding name="WSDualHttpBinding_IZaolisService1" />
    </wsDualHttpBinding>
   </bindings>
   <client>
    <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
-    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ZaolisServiceClient.IZaolisService"
+    bindingConfiguration="WSDualHttpBinding_IZaolisService" contract="ServiceReference1.IZaolisService"
     name="WSDualHttpBinding_IZaolisService">
+    <identity>
+     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+    </identity>
+   </endpoint>
+   <endpoint address="http://localhost:8301/ZaolisService.svc" binding="wsDualHttpBinding"
+    bindingConfiguration="WSDualHttpBinding_IZaolisService1" contract="ZaolisServiceClient.IZaolisService"
+    name="WSDualHttpBinding_IZaolisService1">
     <identity>
      <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
     </identity>
