--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -108,6 +108,10 @@
     <Compile Include="Migrations\202011021725530_UserContact Changes.designer.cs">
       <DependentUpon>202011021725530_UserContact Changes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011022027428_Last active.cs" />
+    <Compile Include="Migrations\202011022027428_Last active.designer.cs">
+      <DependentUpon>202011022027428_Last active.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
@@ -143,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011021725530_UserContact Changes.resx">
       <DependentUpon>202011021725530_UserContact Changes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011022027428_Last active.resx">
+      <DependentUpon>202011022027428_Last active.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
