--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -15,7 +15,7 @@
         </providers>
     </entityFramework>
 	<connectionStrings>
-		<add name="zaolis" connectionString="data source=ZaolisProject.mssql.somee.com;initial catalog=ZaolisProject;User Id=zaolis_SQLLogin_1;Password=vt78mdjfzb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="zaolis" connectionString="data source=den1.mssql7.gear.host;initial catalog=zaolisdatabase;User Id=zaolisdatabase;Password=Iy32g5sz1u?_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
  <system.serviceModel>
   <bindings>
