--- a/ZaolisUI/ZaolisUI.csproj
+++ b/ZaolisUI/ZaolisUI.csproj
@@ -93,6 +93,7 @@
     <Compile Include="GroupInfo.xaml.cs">
       <DependentUpon>GroupInfo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IOverlayWindow.cs" />
     <Compile Include="MainMenuViewModel.cs" />
     <Compile Include="MainMenuZaolis.xaml.cs">
       <DependentUpon>MainMenuZaolis.xaml</DependentUpon>
