--- a/ZaolisUI/App.config
+++ b/ZaolisUI/App.config
@@ -36,7 +36,7 @@
     bindingConfiguration="WSDualHttpBinding_IZaolisService1" contract="ZaolisServiceClient.IZaolisService"
     name="WSDualHttpBinding_IZaolisService1">
     <identity>
-     <userPrincipalName value="VITALIKOLEKS\VitalikOlekS" />
+     <userPrincipalName value="DESKTOP-LM85BNA\Mikola" />
     </identity>
    </endpoint>
   </client>
