--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202011031832474_Fix.designer.cs">
       <DependentUpon>202011031832474_Fix.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011072051070_Last Message.cs" />
+    <Compile Include="Migrations\202011072051070_Last Message.designer.cs">
+      <DependentUpon>202011072051070_Last Message.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configs\UserConfig.cs" />
@@ -101,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011031832474_Fix.resx">
       <DependentUpon>202011031832474_Fix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011072051070_Last Message.resx">
+      <DependentUpon>202011072051070_Last Message.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
