--- a/ZaolisUI/ZaolisUI.csproj
+++ b/ZaolisUI/ZaolisUI.csproj
@@ -81,43 +81,37 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AddFriend.xaml.cs">
-      <DependentUpon>AddFriend.xaml</DependentUpon>
+    <Compile Include="ChatUI\Chat.xaml.cs" />
+    <Compile Include="ChatUI\ChatWindow.xaml.cs" />
+    <Compile Include="ChatUI\GroupInfo.xaml.cs" />
+    <Compile Include="ChatUI\MessageCloud.xaml.cs" />
+    <Compile Include="Main_UI\MainMenuZaolis.xaml.cs">
+      <DependentUpon>MainMenuZaolis.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Chat.xaml.cs">
-      <DependentUpon>Chat.xaml</DependentUpon>
+    <Compile Include="Main_UI\MsgBox.xaml.cs">
+      <DependentUpon>MsgBox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Main_UI\SignIn_SignUp.xaml.cs">
+      <DependentUpon>SignIn_SignUp.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\TransferFileInfo.cs" />
     <Compile Include="Models\ChatInfoModel.cs" />
-    <Compile Include="ChatWindow.xaml.cs">
-      <DependentUpon>ChatWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Connected Services\ZaolisServiceClient\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="GroupInfo.xaml.cs">
-      <DependentUpon>GroupInfo.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Interfaces\IOverlayWindow.cs" />
-    <Compile Include="ViewModels\MainMenuViewModel.cs" />
-    <Compile Include="MainMenuZaolis.xaml.cs">
-      <DependentUpon>MainMenuZaolis.xaml</DependentUpon>
+    <Compile Include="User Info and Settings\AddFriend.xaml.cs">
+      <DependentUpon>AddFriend.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ForgotPasswordCode.xaml.cs">
-      <DependentUpon>ForgotPasswordCode.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MessageCloud.xaml.cs">
-      <DependentUpon>MessageCloud.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MessageModel.cs" />
-    <Compile Include="Settings.xaml.cs">
+    <Compile Include="User Info and Settings\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UserInfo.xaml.cs">
+    <Compile Include="User Info and Settings\UserInfo.xaml.cs">
       <DependentUpon>UserInfo.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\MessageModel.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
     <Compile Include="ValueConverters\BooleanToVisibilityConverter.cs" />
     <Compile Include="ValueConverters\BooleanToVisiblityGoneConverter.cs" />
@@ -125,70 +119,19 @@
     <Compile Include="ValueConverters\SentByMeToBackgroundConverter.cs" />
     <Compile Include="ValueConverters\TimeToDisplayTimeConverter.cs" />
     <Compile Include="ValueConverters\TimeToReadTimeConverter.cs" />
-    <Compile Include="VerificationCode.xaml.cs">
-      <DependentUpon>VerificationCode.xaml</DependentUpon>
-    </Compile>
-    <Page Include="AddFriend.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Chat.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ChatWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="GroupInfo.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainMenuZaolis.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ForgotPasswordCode.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MessageCloud.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MsgBox.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Settings.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SignIn_SignUp.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\IChildWindow.cs" />
-    <Compile Include="MsgBox.xaml.cs">
-      <DependentUpon>MsgBox.xaml</DependentUpon>
+    <Compile Include="VerificationCodes\ForgotPasswordCode.xaml.cs">
+      <DependentUpon>ForgotPasswordCode.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\RegisterViewModel.cs" />
-    <Compile Include="SignIn_SignUp.xaml.cs">
-      <DependentUpon>SignIn_SignUp.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="VerificationCodes\VerificationCode.xaml.cs">
+      <DependentUpon>VerificationCode.xaml</DependentUpon>
     </Compile>
-    <Page Include="UserInfo.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="VerificationCode.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="ViewModels\MainMenuViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -259,7 +202,59 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="ChatUI\Chat.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ChatUI\ChatWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ChatUI\GroupInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ChatUI\MessageCloud.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Main_UI\MainMenuZaolis.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Main_UI\MsgBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Main_UI\SignIn_SignUp.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="User Info and Settings\AddFriend.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="User Info and Settings\Settings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="User Info and Settings\UserInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="VerificationCodes\ForgotPasswordCode.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="VerificationCodes\VerificationCode.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\z.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
